test/spec_vectors/simd_i16x8_arith/fail/module_4.wat
(module (func (result v128) (i16x8.mul (i32.const 0) (f32.const 0.0))))